# sandbox-notification

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  config.yaml  example-config.yaml  example_config.yaml  openapi.yaml  requirements.txt  setup.cfg  setup.py
.devcontainer/: .sandbox_notification.yaml  Dockerfile  dev_config.yaml  dev_install  dev_launcher  devcontainer.json  docker-compose.yml  example_publisher.py  example_pubsub_wrapper.sh  license_checker.py  openapi_from_app.py  sandbox-notification.yaml  test_publisher.py
.github/workflows/: build_documentation.yml  static_code_analysis.yaml
sandbox_notification/: __main__.py  api.py  app.py  channels.py  config.py  notif_schema.json  pubsub.py  receiver.py  sender.py  topics.py
sandbox_notification/config/: config.py  notif_schema.json
sandbox_notification/core/: send.py
sandbox_notification/schemata/: __init__.py  schemata.py  send_notification.json
sandbox_notification/service/: send_mail.py
src/: app.py
src/service/: send_email.py
test/: app_test.py
test/test_publisher/: test_publisher.py
tests/integration/: test_api.py
tests/test_publisher/: test_publisher.py
tests/unit/: test_smtplib.py
